@@ -19,6 +19,7 @@ package org.apache.zookeeper.cli;
 
 import org.apache.commons.cli.ParseException;
 
+@SuppressWarnings("serial")
 public class CliParseException extends CliException {
     public CliParseException(ParseException parseException) {
         super(parseException);
